--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -3,8 +3,9 @@ tasks:
     init: |
       pip3 install -r requirements.txt
       pip3 install -e .
+      gp sync-done requirements
   - name: get MNIST
-    init: gp sync-await bundle
+    init: gp sync-await requirements
     command: python3 lightning_pod/pipeline/dataloader.py
 
 vscode:
