--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,10 @@
 lightning
 pytorch-lightning
 lightning-grid
+hydra-core
+click
+colorama
+tabulate
 # FUNDAMENTAL ML
 scikit-learn
 # TEXT
@@ -14,6 +18,8 @@ torchaudio
 # LIGHTNING ECOSYSTEM
 lightning-bolts
 lightning-flash
+# HYPERPARAMETER TUNING
+optuna
 # VS CODE TENSORBOARD SUPPORT
 torch-tb-profiler
 # PLOTTING AND SYMBOLIC MATH
@@ -28,3 +34,5 @@ mypy
 coverage
 # TQDM SUPPORT IN NOTEBOOKS
 ipywidgets
+# PIN PROTOBUF TO 3.20 TO AVOID 4.12 ERRORS IN CI/CD
+protobuf==3.20.1
