--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -32,14 +32,10 @@
     // Add the IDs of extensions you want installed when the container is created.
     "extensions": [
         "ms-python.python",
-        "ms-python.vscode-pylance",
         "ms-toolsai.jupyter",
         "redhat.vscode-yaml",
         "bierner.github-markdown-preview",
-        "eamodio.gitlens",
-        "GitHub.vscode-pull-request-github",
-        "ms-azuretools.vscode-docker",
-        "ms-vscode.makefile-tools"
+        "GitHub.vscode-pull-request-github"
     ],
     // Use 'forwardPorts' to make a list of ports inside the container available locally.
     // "forwardPorts": [],
