--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -17,8 +17,8 @@
     // Set *default* container specific settings.json values on container create.
     "settings": {
         "python.defaultInterpreterPath": "/usr/local/bin/python",
-        "python.linting.enabled": true,
-        "python.linting.pylintEnabled": true,
+        // "python.linting.enabled": true,
+        // "python.linting.pylintEnabled": true,
         "python.formatting.autopep8Path": "/usr/local/py-utils/bin/autopep8",
         "python.formatting.blackPath": "/usr/local/py-utils/bin/black",
         "python.formatting.yapfPath": "/usr/local/py-utils/bin/yapf",
@@ -27,7 +27,8 @@
         "python.linting.mypyPath": "/usr/local/py-utils/bin/mypy",
         "python.linting.pycodestylePath": "/usr/local/py-utils/bin/pycodestyle",
         "python.linting.pydocstylePath": "/usr/local/py-utils/bin/pydocstyle",
-        "python.linting.pylintPath": "/usr/local/py-utils/bin/pylint"
+        "python.linting.pylintPath": "/usr/local/py-utils/bin/pylint",
+        "git.enableCommitSigning": true
     },
     // Add the IDs of extensions you want installed when the container is created.
     "extensions": [
@@ -47,8 +48,9 @@
         "git": "latest",
         "git-lfs": "latest"
     },
-    "postCreateCommand": [
+    "postStartCommand": [
         "pip3 install -e .",
+        "pre-commit install",
         "python3 spaces_test.py"
     ]
 }
