--- a/requirements.txt
+++ b/requirements.txt
@@ -33,6 +33,7 @@ pytest
 mypy
 coverage
 pre-commit
+isort
 # TQDM SUPPORT IN NOTEBOOKS
 ipywidgets
 # PIN PROTOBUF TO 3.20 TO AVOID 4.12 ERRORS IN CI/CD
